--- a/For_Power/scenarios/05_A_Mage.cfg
+++ b/For_Power/scenarios/05_A_Mage.cfg
@@ -63,7 +63,7 @@
 	  side=4
 	  controller=null
 	  team_name=assasin
-	  user_team_name= _ "Assasin"
+	  user_team_name= _ "Assassin"
 	  no_leader=yes
 	  
 	  gold=0
