--- a/For_Power/scenarios/Epilogue_a.cfg
+++ b/For_Power/scenarios/Epilogue_a.cfg
@@ -40,13 +40,13 @@
   
   [story]
     [part]
-      story = _ "After the defeat of theor sovereign the orcs continued their civil war and stopped attacking human villages."
+      story = _ "After the defeat of their sovereign the orcs continued their civil war and stopped attacking human villages."
     [/part]
     [part]
       story = _ "The villages that had been destroyed were rebuilt and humans settled them again. Peace was ruling the Northlands."
     [/part]
     [part]
-      story = _ "Clare and Lemyr lived peacefuly in their village and were happy. And nothing could break it."
+      story = _ "Clare and Lemyr lived peacefully in their village and were happy. And nothing could break it."
     [/part]
   [/story]
   
