--- a/For_Power/scenarios2/03_More_Orcs.cfg
+++ b/For_Power/scenarios2/03_More_Orcs.cfg
@@ -126,7 +126,7 @@
 	  side=5
 	  controller=ai
 	  team_name=evil
-	  user_team_name= _ "Undeads"
+	  user_team_name= _ "Undead"
 	  
 	  type=Necromancer
 	  id=Mal-Salin
