--- a/For_Power/scenarios2/10_Undeads_in_front_of_Dwarven_Doors.cfg
+++ b/For_Power/scenarios2/10_Undeads_in_front_of_Dwarven_Doors.cfg
@@ -48,7 +48,7 @@
 
 [scenario]
 	id=10_Undeads_in_front_of_Dwarven_Doors
-	name=_"Undeads in front of Dwarven Doors"
+	name=_"Undead in front of Dwarven Doors"
 	next_scenario=11_Back_in_Dwarven_Doors
 	map_data="{~add-ons/For_Power/maps/10_Undeads_in_front_of_Dwarven_Doors.map}"
 	snapshot=no
@@ -93,7 +93,7 @@
 		side=2
 		controller=ai
 		team_name=undead
-    user_team_name= _ "Undeads"
+    user_team_name= _ "Undead"
     
     type=Necromancer
     id=necro1
@@ -112,7 +112,7 @@
 		side=3
 		controller=ai
 		team_name=undead
-    user_team_name= _ "Undeads"
+    user_team_name= _ "Undead"
     
     type=Necromancer
     id=necro2
@@ -131,7 +131,7 @@
 		side=4
 		controller=ai
 		team_name=undead
-    user_team_name= _ "Undeads"
+    user_team_name= _ "Undead"
     
     type=Necromancer
     id=necro3
@@ -208,7 +208,7 @@
     {CLEAR_VARIABLE necromancers}
     [message]
       speaker=Clare
-      message=_"Undeads in front of Dwarven Doors? This is not good at all. What do you want here, necromancers?"
+      message=_"Undead in front of Dwarven Doors? This is not good at all. What do you want here, necromancers?"
     [/message]
     [message]
       speaker=necro1
