--- a/For_Power/scenarios3/01_End_of_peace.cfg
+++ b/For_Power/scenarios3/01_End_of_peace.cfg
@@ -39,7 +39,7 @@
 	  side=2
 	  controller=ai
 	  team_name=evil
-	  user_team_name= _ "Undeads"
+	  user_team_name= _ "Undead"
 	  
 	  type=Dark Sorcerer
 	  id=necro
