--- a/For_Power/scenarios3/02_More_undeads.cfg
+++ b/For_Power/scenarios3/02_More_undeads.cfg
@@ -23,7 +23,7 @@
 
 [scenario]
 	id=02_More_undeads
-	name=_"More undeads"
+	name=_"More undead"
 	next_scenario=03_Meeting_with_Ravanal
 	map_data="{~add-ons/For_Power/maps/02_More_undeads.map}"
 	snapshot=no
@@ -56,7 +56,7 @@
 	  side=2
 	  controller=ai
 	  team_name=evil
-	  user_team_name= _ "Undeads"
+	  user_team_name= _ "Undead"
 	  
 	  type=Dark Sorcerer
 	  id=apprentice
@@ -75,7 +75,7 @@
 	  side=3
 	  controller=ai
 	  team_name=evil
-	  user_team_name= _ "Undeads"
+	  user_team_name= _ "Undead"
 	  
 	  type=Necromancer
 	  id=necro
