--- a/For_Power/scenarios3/03_Meeting_with_Ravanal.cfg
+++ b/For_Power/scenarios3/03_Meeting_with_Ravanal.cfg
@@ -117,11 +117,11 @@
     [/message]
     [message]
       speaker=Ravanal
-      message=_"He is not very known but do not interupt me. So a few weeks ago undeads started to appear there. Only in small numbers but later they attacked near earldoms. I think that they attacked you as well."
+      message=_"He is not very known but do not interupt me. So a few weeks ago undead started to appear there. Only in small numbers but later they attacked near earldoms. I think that they attacked you as well."
     [/message]
     [message]
       speaker=Clare
-      message=_"Yes I encountered some undeads but a woman led them. But later they got reinforcements. They outnumbered us, but later, they left."
+      message=_"Yes I encountered some undead but a woman led them. But later they got reinforcements. They outnumbered us, but later, they left."
     [/message]
     [message]
       speaker=Ravanal
