--- a/For_Power/scenarios3/11_On_the_way_back.cfg
+++ b/For_Power/scenarios3/11_On_the_way_back.cfg
@@ -197,7 +197,7 @@
       [/have_unit]
       [else]
         [message]
-          speaker=unit
+          speaker=second_unit
           message=_"It was the last one."
         [/message]
         [message]
