--- a/For_Power/scenarios3/12_At_home.cfg
+++ b/For_Power/scenarios3/12_At_home.cfg
@@ -31,7 +31,7 @@
 	  side=2
 	  controller=ai
 	  team_name=evil
-	  user_team_name= _ "Undeads"
+	  user_team_name= _ "Undead"
 	  
 	  type=Necromancer
 	  id=necro
@@ -197,7 +197,7 @@
     name=time over
     [message]
       speaker=Clare
-      message=_"More undeads are coming. We are doomed."
+      message=_"More undead are coming. We are doomed."
     [/message]
   [/event]
   
