--- a/For_Power/scenarios4/09_Mal_Ravanal.cfg
+++ b/For_Power/scenarios4/09_Mal_Ravanal.cfg
@@ -43,6 +43,7 @@
     name=_"Mal-Ravanal"
     gender=male
     canrecruit=yes
+    profile="data/campaigns/Eastern_Invasion/images/portraits/mal-ravanal.png"
     
     recruit=Revenant,Bone Shooter,Shadow,Draug
     
