--- a/For_Power/scenarios4/11_Treasure_hunters.cfg
+++ b/For_Power/scenarios4/11_Treasure_hunters.cfg
@@ -113,8 +113,7 @@
     {CAPTURE_VILLAGE 2 39 5}
     {CAPTURE_VILLAGE 2 34 6}
     {CAPTURE_VILLAGE 2 44 3}
-    {VARIABLE tinry_location[x] 2}
-    {VARIABLE_OP tinry_location[y] rand 3..14}
+    {VARIABLE_OP tinry_location rand 3..14}
   [/event]
   
   [event]
@@ -311,7 +310,7 @@
     name=moveto
     [filter]
       id=Merissa
-      x,y=$tinry_location[x],$tinry_location[y]
+      x,y=2,$tinry_location
     [/filter]
     {MOVE_UNIT_BY id=Merissa 1 0}
     [unstore_unit]
