--- a/For_Power/units/Blessed_Mage.cfg
+++ b/For_Power/units/Blessed_Mage.cfg
@@ -129,7 +129,7 @@ Physically frail, and lacking familiarity with combat, magi do possess certain a
     always_display=yes
     id=staff1
     description= _ "better with staff"
-    image=attacks/staff-ruby.png
+    image=attacks/staff-magic.png
     strict_amla=yes
     require_amla=""
 	  [effect]
@@ -310,7 +310,7 @@ Though physically frail, and untrained as warriors, the ‘Red Magi’ have a nu
     always_display=yes
     id=staff1
     description= _ "better with staff"
-    image=attacks/staff-ruby.png
+    image=attacks/staff-magic.png
     strict_amla=yes
     require_amla=""
 	  [effect]
@@ -631,7 +631,7 @@ Silver magi are often more physically adept than other magi, and their skills ar
     always_display=yes
     id=staff2
     description= _ "better with staff"
-    image=attacks/staff-ruby.png
+    image=attacks/staff-magic.png
     strict_amla=yes
     require_amla="staff1"
 	  [effect]
@@ -646,7 +646,7 @@ Silver magi are often more physically adept than other magi, and their skills ar
     always_display=yes
     id=staff3
     description= _ "better with staff"
-    image=attacks/staff-ruby.png
+    image=attacks/staff-magic.png
     strict_amla=yes
     require_amla="staff1,staff2"
 	  [effect]
@@ -661,7 +661,7 @@ Silver magi are often more physically adept than other magi, and their skills ar
     always_display=yes
     id=staff3_marksman
     description= _ "more precise with staff"
-    image=attacks/staff-ruby.png
+    image=attacks/staff-magic.png
     strict_amla=yes
     require_amla="staff1,staff2,staff3"
 	  [effect]
@@ -679,7 +679,7 @@ Silver magi are often more physically adept than other magi, and their skills ar
     always_display=yes
     id=staff3_attacks
     description= _ "faster with staff"
-    image=attacks/staff-ruby.png
+    image=attacks/staff-magic.png
     strict_amla=yes
     require_amla="staff1,staff2,staff3"
 	  [effect]
@@ -694,7 +694,7 @@ Silver magi are often more physically adept than other magi, and their skills ar
     always_display=yes
     id=staff4
     description= _ "better with staff"
-    image=attacks/staff-ruby.png
+    image=attacks/staff-magic.png
     strict_amla=yes
     require_amla="staff1,staff2,staff3"
 	  [effect]
@@ -829,7 +829,7 @@ Silver magi are often more physically adept than other magi, and their skills ar
     always_display=yes
     strict_amla=yes
     require_amla=""
-    description= _ "able to heal allies"
+    description= _ "female^able to heal allies"
     image=icons/potion_red_medium.png
     [effect]
 			apply_to=new_ability
@@ -899,7 +899,7 @@ Silver magi are often more physically adept than other magi, and their skills ar
     always_display=yes
     strict_amla=yes
     require_amla="path_of_light"
-    description= _ "user of holy magic (sets alignment to lawful)"
+    description= _ "female^user of holy magic (sets alignment to lawful)"
     image=attacks/lightbeam.png
     [effect]
       apply_to=variation
@@ -927,7 +927,7 @@ Silver magi are often more physically adept than other magi, and their skills ar
     max_times=1
     always_display=yes
     id=shield
-    description= _ "able to make allies resist damage better (20% to resistances)"
+    description= _ "female^able to make allies resist damage better (20% to resistances)"
     image=attacks/faerie-fire.png
 	  strict_amla=yes
     require_amla="path_of_light"
@@ -1096,6 +1096,7 @@ Silver magi are often more physically adept than other magi, and their skills ar
     variation_name=Blessed_Silver_Mage_Good
     inherit=yes
     alignment=lawful
+    halo=halo/illuminates-aura.png
     [attack]
       name=staff
       description={STR_STAFF}
