--- a/For_Power/units/Clare_Lich.cfg
+++ b/For_Power/units/Clare_Lich.cfg
@@ -634,7 +634,7 @@
     max_times=1
     always_display=yes
     id=entangle1
-    description= _ "able to entangle enemies"
+    description= _ "female^able to entangle enemies"
     image=attacks/entangle.png
     strict_amla=yes
     require_amla="entangle"
@@ -778,7 +778,7 @@
     id=armour
     max_times=5
     always_display=yes
-    description= _ "better protected from magical attacks (2 or 3% better resistances)"
+    description= _ "female^better protected from magical attacks (2 or 3% better resistances)"
     image=icons/magical_shield.png
     strict_amla=yes
     require_amla=""
@@ -797,7 +797,7 @@
     id=possessed
     max_times=1
     always_display=yes
-    description=_"possessed by death (more hitpoints but worse arcane resistance)"
+    description=_"female^possessed by death (more hitpoints but worse arcane resistance)"
     image=attacks/wail.png
     strict_amla=yes
     require_amla="mysteryofdeath"
@@ -818,7 +818,7 @@
     id=drain
     max_times=1
     always_display=yes
-    description=_"able to drain life force from living enemies (but worse arcane resistance)"
+    description=_"female^able to drain life force from living enemies (but worse arcane resistance)"
     image=attacks/dark-missile.png
     strict_amla=yes
     require_amla="mysteryofdeath,possessed"
@@ -844,7 +844,7 @@
     id=cold
     max_times=1
     always_display=yes
-    description=_"cold-hearted (better cold resistance)"
+    description=_"female^cold-hearted (better cold resistance)"
     image=items/ball-blue.png
     strict_amla=yes
     require_amla="mysteryofdeath,possessed"
@@ -861,7 +861,7 @@
     id=cold1
     max_times=1
     always_display=yes
-    description=_"more cold-hearted (better cold resistance)"
+    description=_"female^more cold-hearted (better cold resistance)"
     image=items/ball-blue.png
     strict_amla=yes
     require_amla="mysteryofdeath,possessed,cold"
@@ -878,7 +878,7 @@
     id=fire
     max_times=1
     always_display=yes
-    description=_"better protected from fire"
+    description=_"female^better protected from fire"
     image=attacks/fire-blast.png
     strict_amla=yes
     require_amla="mysteryofdeath,possessed"
@@ -939,7 +939,7 @@
     id=darkness
     max_times=1
     always_display=yes
-    description= _ "connected with darkness (spread despair but worse arcane resistance)"
+    description= _ "female^connected with darkness (spread despair but worse arcane resistance)"
     image=attacks/blank-attack.png
     strict_amla=yes
     require_amla="mysteryofdeath,possessed,cold"
@@ -962,7 +962,7 @@
     id=darkness1
     max_times=1
     always_display=yes
-    description= _ "more connected with darkness (spread even greater despair and invisible during the night but worse arcane resistance)"
+    description= _ "female^more connected with darkness (spread even greater despair and invisible during the night but worse arcane resistance)"
     image=attacks/blank-attack.png
     strict_amla=yes
     require_amla="mysteryofdeath,possessed,cold,cold1,darkness"
@@ -997,7 +997,7 @@
     id=shadowwave1
     max_times=1
     always_display=yes
-    description= _ "able to cast shadow wave"
+    description= _ "female^able to cast shadow wave"
     image=attacks/dark-missile.png
     strict_amla=yes
     require_amla="mysteryofdeath,possessed"
@@ -1020,7 +1020,7 @@
     id=shadowwave2
     max_times=1
     always_display=yes
-    description= _ "casting shadow wave faster"
+    description= _ "female^casting shadow wave faster"
     image=attacks/dark-missile.png
     strict_amla=yes
     require_amla="shadowwave1"
@@ -1035,7 +1035,7 @@
     id=shadowwave3
     max_times=5
     always_display=yes
-    description= _ "casting shadow wave better"
+    description= _ "female^casting shadow wave better"
     image=attacks/dark-missile.png
     strict_amla=yes
     require_amla="shadowwave1,shadowwave2"
@@ -1094,7 +1094,7 @@
     id=movement3
     max_times=1
     always_display=yes
-    description= _ "able to muster enough mental powers to levitate through hard terrains"
+    description= _ "female^able to muster enough mental powers to levitate through hard terrains"
     image=icons/boots_elven.png
     strict_amla=yes
     require_amla="movement,movement,redeem_mastery"
