--- a/For_Power/units/Merissa_Lich.cfg
+++ b/For_Power/units/Merissa_Lich.cfg
@@ -270,7 +270,7 @@
     max_times=1
     always_display=yes
     id=nightstalk
-    description= _ "invisible during night"
+    description= _ "female^invisible during night"
     image=attacks/blank-attack.png
     strict_amla=yes
     require_amla="movement,movement,block,block,block"
@@ -344,7 +344,7 @@
     id=armour_physical1
     max_times=4
     always_display=yes
-    description= _ "better protected from physical blows (3% better resistances)"
+    description= _ "female^better protected from physical blows (3% better resistances)"
     image=icons/armor_leather.png
     strict_amla=yes
     require_amla="armour_physical"
@@ -363,7 +363,7 @@
     id=armour_magical1
     max_times=4
     always_display=yes
-    description= _ "better protected from magical attacks (3% better resistances)"
+    description= _ "female^better protected from magical attacks (3% better resistances)"
     image=icons/magical_shield.png
     strict_amla=yes
     require_amla="armour_magical"
@@ -382,7 +382,7 @@
     id=skirmisher
     max_times=1
     always_display=yes
-    description= _ "able to sneak through hordes of enemies"
+    description= _ "female^able to sneak through hordes of enemies"
     image=icons/sandals.png
     strict_amla=yes
     require_amla="movement,movement,movement"
@@ -398,7 +398,7 @@
     id=drain1
     max_times=1
     always_display=yes
-    description=_"able to drain life force from living enemies"
+    description=_"female^able to drain life force from living enemies"
     image=attacks/iceball.png
     strict_amla=yes
     require_amla="drain"
@@ -417,7 +417,7 @@
     id=chill1
     max_times=1
     always_display=yes
-    description= _ "able to cast chill tempest"
+    description= _ "female^able to cast chill tempest"
     image=attacks/iceball.png
     strict_amla=yes
     require_amla="chill"
@@ -508,7 +508,7 @@
     max_times=1
     always_display=yes
     id=shield
-    description= _ "able to make fellow bandits resist pain better (20% to resistances)"
+    description= _ "female^able to make fellow bandits resist pain better (20% to resistances)"
     image=attacks/faerie-fire.png
 	  strict_amla=yes
     require_amla="leadership2"
