--- a/For_Power/scenarios2/01_Return_of_troubles.cfg
+++ b/For_Power/scenarios2/01_Return_of_troubles.cfg
@@ -62,7 +62,7 @@
 	  side=3
 	  controller=ai
 	  team_name=evil
-	  user_team_name= _ "Undeads"
+	  user_team_name= _ "Undead"
 	  
 	  type=Dark Sorcerer
 	  id=Mal-Anil
