wescamp.py: Update from add-on server

--- a/For_Power/_main.cfg
+++ b/For_Power/_main.cfg
@@ -13,13 +13,7 @@
     [/entry]
   [/about]
   [about]
-    title= _ "Help with coding, design of a part of storyline:"
-    [entry]
-      name="Dugi"
-    [/entry]
-  [/about]
-  [about]
-    title= _ "Portrait and sprite for Clare:"
+    title= _ "Code, storyline & art advice:"
     [entry]
       name="Dugi"
     [/entry]
