--- a/For_Power/macros/redeem.cfg
+++ b/For_Power/macros/redeem.cfg
@@ -387,8 +387,7 @@
                         [chance_to_hit]
                           id=focused
                           name= _ "focused"
-                          description= _ "Focused:
-    This attack always has at least a 80% chance to hit."
+                          description= _ "This attack always has at least a 80% chance to hit."
                           value=80
                           cumulative=yes
                         [/chance_to_hit]
