--- a/For_Power/multiplayer/Source_of_evil.cfg
+++ b/For_Power/multiplayer/Source_of_evil.cfg
@@ -136,7 +136,7 @@
 				condition=win
 			[/objective]
 		  [objective]
-		    description= _ "Descruction of Clare"
+		    description= _ "Destruction of Clare"
 		    condition=lose
 	    [/objective]
 	    [objective]
