--- a/For_Power/utils5/deaths.cfg
+++ b/For_Power/utils5/deaths.cfg
@@ -91,4 +91,20 @@
     [/message]
     {DEFEAT}
   [/event]
+  
+  [event]
+    name=last breath
+    [filter]
+      id=olderJolla
+    [/filter]
+    [message]
+      speaker=unit
+      message=_"I fall to the darkness."
+    [/message]
+    [message]
+      speaker=Clare
+      message=_"Jolla! No!"
+    [/message]
+    {DEFEAT}
+  [/event]
 #enddef
