--- a/For_Power/multiplayer/Seeking_evil.cfg
+++ b/For_Power/multiplayer/Seeking_evil.cfg
@@ -295,7 +295,7 @@ This is a relatively short scenario."
 				condition=win
 			[/objective]
 		  [objective]
-		    description= _ "Descruction of Clare"
+		    description= _ "Destruction of Clare"
 		    condition=lose
 	    [/objective]
 	    [objective]
