wescamp.py: Update from add-on server

--- a/For_Power/scenarios2/10_Undeads_in_front_of_Dwarven_Doors.cfg
+++ b/For_Power/scenarios2/10_Undeads_in_front_of_Dwarven_Doors.cfg
@@ -273,7 +273,14 @@
     [/message]
     [message]
       speaker=Clare
-      message=_"I think that I have to use necromancy to survive. I know that this is bad but I have no more options. I hope that no one will see it."
+      message=_"This is not good at all. What shall I do?"
+    [/message]
+    [delay]
+      time=1000
+    [/delay]
+    [message]
+      speaker=Clare
+      message=_"Oh, I can see some corpses lying nearby. I think that I have to rise them in order to survive, I would be able to do it. I know that this is bad but I can do nothing else. I only hope that no one will see me doing something such horrible."
     [/message]
   [/event]
   
